@@ -1,3 +1,10 @@
+2013-11-29  Hirochika Asai  <asai@scyphus.co.jp>
+
+    * las/arch/x86_64/eval.c: Implemented the address operand evaluator
+    * las/arch/x86_64/eval.h: Implemented the address operand evaluator
+    * las/arch/x86_64/main.c: Added a print statement for unknown instruction
+
+
 2013-11-28  Hirochika Asai  <asai@scyphus.co.jp>
 
     * las/arch/x86_64/eval.c: Implemented operand evaluator for register and
